Fix scrolling issue on iOS

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,7 +4,6 @@
 
 html, body, #root {
   height: 100%;
-  overflow-y: auto;
   font-family: 'Ubuntu', Arial, Helvetica, sans-serif;
 }
 
